Sync all content

--- a/content/resources/22-081jf10-th.md
+++ b/content/resources/22-081jf10-th.md
@@ -8,7 +8,9 @@ image_metadata:
     by [kuba](http://www.openclipart.org/detail/2213) at the Open Clip Art Library.)
   credit: ''
   image-alt: Earth encompassed by recycling symbol.
+learning_resource_types: []
 resourcetype: Image
 title: 22-081jf10-th.jpg
+type: OCWImage
 uid: 11f02846-93e2-7324-c138-84323a27aa86
 ---
