--- a/content/resources/22-081jf10.md
+++ b/content/resources/22-081jf10.md
@@ -8,7 +8,9 @@ image_metadata:
     by [kuba](http://www.openclipart.org/detail/2213) at the Open Clip Art Library.)
   credit: ''
   image-alt: Earth encompassed by recycling symbol.
+learning_resource_types: []
 resourcetype: Image
 title: 22-081jf10.jpg
+type: OCWImage
 uid: 61602f1b-9bd6-8d30-1f9f-be3893c266d9
 ---
