--- a/content/resources/mit22_081jf10_lec01a_2.md
+++ b/content/resources/mit22_081jf10_lec01a_2.md
@@ -4,7 +4,11 @@ description: This resource contains information related to energy uses in differ
   countries.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/ff50ecb2db48f84755b97c270f386dd0_MIT22_081JF10_lec01a_2.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec01a_2.pdf
+type: OCWFile
 uid: ff50ecb2-db48-f847-55b9-7c270f386dd0
 ---
