--- a/content/resources/mit22_081jf10_lec01a_3.md
+++ b/content/resources/mit22_081jf10_lec01a_3.md
@@ -4,7 +4,11 @@ description: This resource contains information related to energy uses in differ
   countries.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/9340e6d454e227e470453a94c16f8629_MIT22_081JF10_lec01a_3.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec01a_3.pdf
+type: OCWFile
 uid: 9340e6d4-54e2-27e4-7045-3a94c16f8629
 ---
