--- a/content/resources/mit22_081jf10_lec01b.md
+++ b/content/resources/mit22_081jf10_lec01b.md
@@ -4,7 +4,11 @@ description: This resource contains information related to overview of energy us
   and related issues.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/a0eac4cd3f655795dad62021b1a4c769_MIT22_081JF10_lec01b.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec01b.pdf
+type: OCWFile
 uid: a0eac4cd-3f65-5795-dad6-2021b1a4c769
 ---
