--- a/content/resources/mit22_081jf10_lec02.md
+++ b/content/resources/mit22_081jf10_lec02.md
@@ -4,7 +4,11 @@ description: This resource contains information related to global climate change
   and responses.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/e2af42d2014c25ba251632594ebb60d8_MIT22_081JF10_lec02.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec02.pdf
+type: OCWFile
 uid: e2af42d2-014c-25ba-2516-32594ebb60d8
 ---
