--- a/content/resources/mit22_081jf10_lec03a.md
+++ b/content/resources/mit22_081jf10_lec03a.md
@@ -4,7 +4,11 @@ description: This resource contains information related to energy transfer and c
   methods.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/e538c44f7b16f6c0ebfe98ad37f42e5b_MIT22_081JF10_lec03a.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec03a.pdf
+type: OCWFile
 uid: e538c44f-7b16-f6c0-ebfe-98ad37f42e5b
 ---
