--- a/content/resources/mit22_081jf10_lec03b.md
+++ b/content/resources/mit22_081jf10_lec03b.md
@@ -4,7 +4,11 @@ description: This resource contains information related to sustainability, energ
   and clean technologies in context
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/159d87b015b4bd28d95e61165011595c_MIT22_081JF10_lec03b.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec03b.pdf
+type: OCWFile
 uid: 159d87b0-15b4-bd28-d95e-61165011595c
 ---
