--- a/content/resources/mit22_081jf10_lec04a.md
+++ b/content/resources/mit22_081jf10_lec04a.md
@@ -4,7 +4,11 @@ description: This resource contains information related to discussion of sustain
   issues.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/a5660d8ee904b94a5bd424e0a600a172_MIT22_081JF10_lec04a.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec04a.pdf
+type: OCWFile
 uid: a5660d8e-e904-b94a-5bd4-24e0a600a172
 ---
