--- a/content/resources/mit22_081jf10_lec06a.md
+++ b/content/resources/mit22_081jf10_lec06a.md
@@ -3,7 +3,11 @@ content_type: resource
 description: This resource contains information related to systems analysis methodologies.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/c5543aa3b20bf25cf7107886c8ecc7c5_MIT22_081JF10_lec06a.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec06a.pdf
+type: OCWFile
 uid: c5543aa3-b20b-f25c-f710-7886c8ecc7c5
 ---
