--- a/content/resources/mit22_081jf10_lec06b.md
+++ b/content/resources/mit22_081jf10_lec06b.md
@@ -4,7 +4,11 @@ description: This resource contains information related to energy supply, demand
   and storage planning.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/187b226b2a8125aa2c0047f2b4dc5d6b_MIT22_081JF10_lec06b.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec06b.pdf
+type: OCWFile
 uid: 187b226b-2a81-25aa-2c00-47f2b4dc5d6b
 ---
