--- a/content/resources/mit22_081jf10_lec07a.md
+++ b/content/resources/mit22_081jf10_lec07a.md
@@ -4,7 +4,11 @@ description: This resource contains information related to the electric power sy
   and requirements for success.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/a070ea06743b474bd8cce97d0686dc97_MIT22_081JF10_lec07a.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec07a.pdf
+type: OCWFile
 uid: a070ea06-743b-474b-d8cc-e97d0686dc97
 ---
