--- a/content/resources/mit22_081jf10_lec07b.md
+++ b/content/resources/mit22_081jf10_lec07b.md
@@ -4,7 +4,11 @@ description: This resource contains information related to historical factor and
   for change in the electric power grid.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/96424e5dedc36ef30cc8cf7f178df2b5_MIT22_081JF10_lec07b.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec07b.pdf
+type: OCWFile
 uid: 96424e5d-edc3-6ef3-0cc8-cf7f178df2b5
 ---
