--- a/content/resources/mit22_081jf10_lec08a.md
+++ b/content/resources/mit22_081jf10_lec08a.md
@@ -3,7 +3,11 @@ content_type: resource
 description: This resource contains information related to electrical systems dynamics.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/327ed2c5275c48dc2fca48a4017c757a_MIT22_081JF10_lec08a.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec08a.pdf
+type: OCWFile
 uid: 327ed2c5-275c-48dc-2fca-48a4017c757a
 ---
