--- a/content/resources/mit22_081jf10_lec09b.md
+++ b/content/resources/mit22_081jf10_lec09b.md
@@ -4,7 +4,11 @@ description: This resource contains information related to carbon limitation pol
   options.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/371eaaf6c604e383513a7277c7fdd08d_MIT22_081JF10_lec09b.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec09b.pdf
+type: OCWFile
 uid: 371eaaf6-c604-e383-513a-7277c7fdd08d
 ---
