--- a/content/resources/mit22_081jf10_lec10.md
+++ b/content/resources/mit22_081jf10_lec10.md
@@ -4,7 +4,11 @@ description: 'This resource contains information related to nuclear energy I: Ba
   and current status.'
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/0e45a3db7a9e16fa7b4f757767fdf5ea_MIT22_081JF10_lec10.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec10.pdf
+type: OCWFile
 uid: 0e45a3db-7a9e-16fa-7b4f-757767fdf5ea
 ---
