--- a/content/resources/mit22_081jf10_lec11a.md
+++ b/content/resources/mit22_081jf10_lec11a.md
@@ -3,7 +3,11 @@ content_type: resource
 description: This resource contains information related to fossil energy I.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/2398af71e42a157e3de99d3c10b28b1a_MIT22_081JF10_lec11a.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec11a.pdf
+type: OCWFile
 uid: 2398af71-e42a-157e-3de9-9d3c10b28b1a
 ---
