--- a/content/resources/mit22_081jf10_lec11b.md
+++ b/content/resources/mit22_081jf10_lec11b.md
@@ -3,7 +3,11 @@ content_type: resource
 description: This resource contains information related to fossil energy II.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/828ebb41bfc2480027fa671751083265_MIT22_081JF10_lec11b.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec11b.pdf
+type: OCWFile
 uid: 828ebb41-bfc2-4800-27fa-671751083265
 ---
