--- a/content/resources/mit22_081jf10_lec13a.md
+++ b/content/resources/mit22_081jf10_lec13a.md
@@ -4,7 +4,11 @@ description: This resource contains information related to transport in developi
   countries.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/60aaac72c8644088f7b15bc9d0e3df5c_MIT22_081JF10_lec13a.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec13a.pdf
+type: OCWFile
 uid: 60aaac72-c864-4088-f7b1-5bc9d0e3df5c
 ---
