--- a/content/resources/mit22_081jf10_lec13b.md
+++ b/content/resources/mit22_081jf10_lec13b.md
@@ -3,7 +3,11 @@ content_type: resource
 description: This resource contains information related to fossil energy III.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/54960cadc1f46e890401b1f28b524e41_MIT22_081JF10_lec13b.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec13b.pdf
+type: OCWFile
 uid: 54960cad-c1f4-6e89-0401-b1f28b524e41
 ---
