--- a/content/resources/mit22_081jf10_lec15a.md
+++ b/content/resources/mit22_081jf10_lec15a.md
@@ -4,7 +4,11 @@ description: 'This resource contains information related to nuclear energy III: 
   of civilian nuclear power and proliferation.'
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/9e0b0e841ee598c07f143665c6c026de_MIT22_081JF10_lec15a.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec15a.pdf
+type: OCWFile
 uid: 9e0b0e84-1ee5-98c0-7f14-3665c6c026de
 ---
