--- a/content/resources/mit22_081jf10_lec19a.md
+++ b/content/resources/mit22_081jf10_lec19a.md
@@ -3,7 +3,11 @@ content_type: resource
 description: This resource contains information related to biomass I .
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/61bdcdd4acf4bc3ecb81ba8a7ac78540_MIT22_081JF10_lec19a.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec19a.pdf
+type: OCWFile
 uid: 61bdcdd4-acf4-bc3e-cb81-ba8a7ac78540
 ---
