--- a/content/resources/mit22_081jf10_lec19b.md
+++ b/content/resources/mit22_081jf10_lec19b.md
@@ -4,7 +4,11 @@ description: 'This resource contains information related to biomass II: Producin
   liquid fuels.'
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/62854a6d00920579189ca8506e2c36af_MIT22_081JF10_lec19b.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec19b.pdf
+type: OCWFile
 uid: 62854a6d-0092-0579-189c-a8506e2c36af
 ---
