--- a/content/resources/mit22_081jf10_lec20a.md
+++ b/content/resources/mit22_081jf10_lec20a.md
@@ -3,7 +3,11 @@ content_type: resource
 description: This resource contains information related to transportation.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/ea29b1164df9c1ea16398e244194d2ec_MIT22_081JF10_lec20a.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec20a.pdf
+type: OCWFile
 uid: ea29b116-4df9-c1ea-1639-8e244194d2ec
 ---
