--- a/content/resources/mit22_081jf10_lec21a.md
+++ b/content/resources/mit22_081jf10_lec21a.md
@@ -4,7 +4,11 @@ description: This resource contains information related to wind system dynamics,
   to entry.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/509bf6a520bedbdcd654c5c81e026684_MIT22_081JF10_lec21a.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec21a.pdf
+type: OCWFile
 uid: 509bf6a5-20be-dbdc-d654-c5c81e026684
 ---
