--- a/content/resources/mit22_081jf10_lec21b.md
+++ b/content/resources/mit22_081jf10_lec21b.md
@@ -4,7 +4,11 @@ description: This resource contains information related to electrochemical energ
   conversions.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/bc5ddccf28ceb56d779f52fefc38f912_MIT22_081JF10_lec21b.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec21b.pdf
+type: OCWFile
 uid: bc5ddccf-28ce-b56d-779f-52fefc38f912
 ---
