--- a/content/resources/mit22_081jf10_lec22b.md
+++ b/content/resources/mit22_081jf10_lec22b.md
@@ -3,7 +3,11 @@ content_type: resource
 description: This resource contains information related to probabilistic risk analysis.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/e5d25cba736c8866c310af09a1a6d53e_MIT22_081JF10_lec22b.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec22b.pdf
+type: OCWFile
 uid: e5d25cba-736c-8866-c310-af09a1a6d53e
 ---
