--- a/content/resources/mit22_081jf10_lec23.md
+++ b/content/resources/mit22_081jf10_lec23.md
@@ -4,7 +4,11 @@ description: This resource contains information related to current energy policy
   critique.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/94924e7d20d5217401c374fceba174e6_MIT22_081JF10_lec23.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec23.pdf
+type: OCWFile
 uid: 94924e7d-20d5-2174-01c3-74fceba174e6
 ---
