--- a/content/resources/mit22_081jf10_lec24a.md
+++ b/content/resources/mit22_081jf10_lec24a.md
@@ -4,7 +4,11 @@ description: This resource contains information related to corporate and interna
   efforts to abate global climate change; sustainability and global business.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/8afda47dff6ef70bb8ca06b26b82535b_MIT22_081JF10_lec24a.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec24a.pdf
+type: OCWFile
 uid: 8afda47d-ff6e-f70b-b8ca-06b26b82535b
 ---
