--- a/content/resources/mit22_081jf10_lec24b.md
+++ b/content/resources/mit22_081jf10_lec24b.md
@@ -3,7 +3,11 @@ content_type: resource
 description: This resource contains information related to Hydropower.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/68ee6fb48d87d840d6db9e254453d4c2_MIT22_081JF10_lec24b.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec24b.pdf
+type: OCWFile
 uid: 68ee6fb4-8d87-d840-d6db-9e254453d4c2
 ---
