--- a/content/resources/mit22_081jf10_lec25a.md
+++ b/content/resources/mit22_081jf10_lec25a.md
@@ -4,7 +4,11 @@ description: This resource contains information related to challenges and option
   for electricity systems in Sub-Saharan Africa.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/01a1ce256e33da2525f329e957d16851_MIT22_081JF10_lec25a.pdf
 file_type: application/pdf
+learning_resource_types: []
+parent_title: Lectures and Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT22_081JF10_lec25a.pdf
+type: OCWFile
 uid: 01a1ce25-6e33-da25-25f3-29e957d16851
 ---
