Sync all content

--- a/content/resources/mit22_081jf10_lec03b.md
+++ b/content/resources/mit22_081jf10_lec03b.md
@@ -5,6 +5,7 @@ description: This resource contains information related to sustainability, energ
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/159d87b015b4bd28d95e61165011595c_MIT22_081JF10_lec03b.pdf
 file_type: application/pdf
 learning_resource_types: []
+ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
 resourcetype: Document
