--- a/content/resources/22-081jf10.md
+++ b/content/resources/22-081jf10.md
@@ -9,6 +9,7 @@ image_metadata:
   credit: ''
   image-alt: Earth encompassed by recycling symbol.
 learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 22-081jf10.jpg
 uid: 61602f1b-9bd6-8d30-1f9f-be3893c266d9
