--- a/content/resources/mit22_081jf10_lec01a_1.md
+++ b/content/resources/mit22_081jf10_lec01a_1.md
@@ -4,6 +4,7 @@ description: This resource contains information related to overview and administ
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/414f6cb7ead7ac29798f477f1b065859_MIT22_081JF10_lec01a_1.pdf
 file_type: application/pdf
 learning_resource_types: []
+ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
 resourcetype: Document
