--- a/content/resources/mit22_081jf10_lec04b.md
+++ b/content/resources/mit22_081jf10_lec04b.md
@@ -5,6 +5,7 @@ description: This resource contains information related to resource evaluation a
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/069e127c6553897886647a67ebf88940_MIT22_081JF10_lec04b.pdf
 file_type: application/pdf
 learning_resource_types: []
+ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
 resourcetype: Document
