--- a/content/resources/mit22_081jf10_lec08b.md
+++ b/content/resources/mit22_081jf10_lec08b.md
@@ -5,6 +5,7 @@ description: This resource contains information related to economic feasibility 
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/390d0e72f534c7d1da56ef18de2b0be0_MIT22_081JF10_lec08b.pdf
 file_type: application/pdf
 learning_resource_types: []
+ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
 resourcetype: Document
