--- a/content/resources/mit22_081jf10_lec09a.md
+++ b/content/resources/mit22_081jf10_lec09a.md
@@ -5,6 +5,7 @@ description: This resource contains information related to thermodynamics and ef
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/411beca04e9b15f5ca2caed33b4a801d_MIT22_081JF10_lec09a.pdf
 file_type: application/pdf
 learning_resource_types: []
+ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
 resourcetype: Document
