--- a/content/resources/mit22_081jf10_lec09b.md
+++ b/content/resources/mit22_081jf10_lec09b.md
@@ -5,6 +5,7 @@ description: This resource contains information related to carbon limitation pol
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/371eaaf6c604e383513a7277c7fdd08d_MIT22_081JF10_lec09b.pdf
 file_type: application/pdf
 learning_resource_types: []
+ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
 resourcetype: Document
