--- a/content/resources/mit22_081jf10_lec10.md
+++ b/content/resources/mit22_081jf10_lec10.md
@@ -5,6 +5,7 @@ description: 'This resource contains information related to nuclear energy I: Ba
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/0e45a3db7a9e16fa7b4f757767fdf5ea_MIT22_081JF10_lec10.pdf
 file_type: application/pdf
 learning_resource_types: []
+ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
 resourcetype: Document
