--- a/content/resources/mit22_081jf10_lec11a.md
+++ b/content/resources/mit22_081jf10_lec11a.md
@@ -4,6 +4,7 @@ description: This resource contains information related to fossil energy I.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/2398af71e42a157e3de99d3c10b28b1a_MIT22_081JF10_lec11a.pdf
 file_type: application/pdf
 learning_resource_types: []
+ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
 resourcetype: Document
