--- a/content/resources/mit22_081jf10_lec12b.md
+++ b/content/resources/mit22_081jf10_lec12b.md
@@ -4,6 +4,7 @@ description: This resource contains information related to current energy policy
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/9063ff3444c71d54fd3576cf5efc7740_MIT22_081JF10_lec12b.pdf
 file_type: application/pdf
 learning_resource_types: []
+ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
 resourcetype: Document
