--- a/content/resources/mit22_081jf10_lec14b.md
+++ b/content/resources/mit22_081jf10_lec14b.md
@@ -5,6 +5,7 @@ description: 'This resource contains information related to nuclear energy II: W
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/97c769b2127d9444467c1e7546f9b469_MIT22_081JF10_lec14b.pdf
 file_type: application/pdf
 learning_resource_types: []
+ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
 resourcetype: Document
