--- a/content/resources/mit22_081jf10_lec15b.md
+++ b/content/resources/mit22_081jf10_lec15b.md
@@ -5,6 +5,7 @@ description: This resource contains information related to fusion as a future en
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/724c5f5e9ebb96432c71a255338a15ae_MIT22_081JF10_lec15b.pdf
 file_type: application/pdf
 learning_resource_types: []
+ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
 resourcetype: Document
