--- a/content/resources/mit22_081jf10_lec18.md
+++ b/content/resources/mit22_081jf10_lec18.md
@@ -5,6 +5,7 @@ description: This resource contains information related to carbon limitation opt
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/3d706ca372258e1edbe9a6a26fd77086_MIT22_081JF10_lec18.pdf
 file_type: application/pdf
 learning_resource_types: []
+ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
 resourcetype: Document
