--- a/content/resources/mit22_081jf10_lec19b.md
+++ b/content/resources/mit22_081jf10_lec19b.md
@@ -5,6 +5,7 @@ description: 'This resource contains information related to biomass II: Producin
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/62854a6d00920579189ca8506e2c36af_MIT22_081JF10_lec19b.pdf
 file_type: application/pdf
 learning_resource_types: []
+ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
 resourcetype: Document
