--- a/content/resources/mit22_081jf10_lec20b.md
+++ b/content/resources/mit22_081jf10_lec20b.md
@@ -5,6 +5,7 @@ description: This resource contains information related to lifecycle analysis of
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/114ec00c3a30e8b2a22f9de52d67fbab_MIT22_081JF10_lec20b.pdf
 file_type: application/pdf
 learning_resource_types: []
+ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
 resourcetype: Document
