--- a/content/resources/mit22_081jf10_lec21b.md
+++ b/content/resources/mit22_081jf10_lec21b.md
@@ -5,6 +5,7 @@ description: This resource contains information related to electrochemical energ
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/bc5ddccf28ceb56d779f52fefc38f912_MIT22_081JF10_lec21b.pdf
 file_type: application/pdf
 learning_resource_types: []
+ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
 resourcetype: Document
