--- a/content/resources/mit22_081jf10_lec22a.md
+++ b/content/resources/mit22_081jf10_lec22a.md
@@ -5,6 +5,7 @@ description: This resource contains information related to sustainable buildings
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/24620c1fbd0b8655c786c9ed9a26328d_MIT22_081JF10_lec22a.pdf
 file_type: application/pdf
 learning_resource_types: []
+ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
 resourcetype: Document
