--- a/content/resources/mit22_081jf10_lec24a.md
+++ b/content/resources/mit22_081jf10_lec24a.md
@@ -5,6 +5,7 @@ description: This resource contains information related to corporate and interna
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/8afda47dff6ef70bb8ca06b26b82535b_MIT22_081JF10_lec24a.pdf
 file_type: application/pdf
 learning_resource_types: []
+ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
 resourcetype: Document
