--- a/content/resources/mit22_081jf10_lec25a.md
+++ b/content/resources/mit22_081jf10_lec25a.md
@@ -5,6 +5,7 @@ description: This resource contains information related to challenges and option
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/22-081j-introduction-to-sustainable-energy-fall-2010/01a1ce256e33da2525f329e957d16851_MIT22_081JF10_lec25a.pdf
 file_type: application/pdf
 learning_resource_types: []
+ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
 resourcetype: Document
