Sync all content

--- a/content/resources/mit22_081jf10_lec01a_3.md
+++ b/content/resources/mit22_081jf10_lec01a_3.md
@@ -8,6 +8,7 @@ learning_resource_types: []
 ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
+parent_uid: e7a00e10-1594-2743-50ff-a5b52e167aa5
 resourcetype: Document
 title: MIT22_081JF10_lec01a_3.pdf
 uid: 9340e6d4-54e2-27e4-7045-3a94c16f8629
