--- a/content/resources/mit22_081jf10_lec05b.md
+++ b/content/resources/mit22_081jf10_lec05b.md
@@ -7,6 +7,7 @@ learning_resource_types: []
 ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
+parent_uid: e7a00e10-1594-2743-50ff-a5b52e167aa5
 resourcetype: Document
 title: MIT22_081JF10_lec05b.pdf
 uid: 1b8f7cf6-9542-2738-3a32-3ce08ffe6ae6
