--- a/content/resources/mit22_081jf10_lec11a.md
+++ b/content/resources/mit22_081jf10_lec11a.md
@@ -7,6 +7,7 @@ learning_resource_types: []
 ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
+parent_uid: e7a00e10-1594-2743-50ff-a5b52e167aa5
 resourcetype: Document
 title: MIT22_081JF10_lec11a.pdf
 uid: 2398af71-e42a-157e-3de9-9d3c10b28b1a
