--- a/content/resources/mit22_081jf10_lec13a.md
+++ b/content/resources/mit22_081jf10_lec13a.md
@@ -8,6 +8,7 @@ learning_resource_types: []
 ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
+parent_uid: e7a00e10-1594-2743-50ff-a5b52e167aa5
 resourcetype: Document
 title: MIT22_081JF10_lec13a.pdf
 uid: 60aaac72-c864-4088-f7b1-5bc9d0e3df5c
