--- a/content/resources/mit22_081jf10_lec13b.md
+++ b/content/resources/mit22_081jf10_lec13b.md
@@ -7,6 +7,7 @@ learning_resource_types: []
 ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
+parent_uid: e7a00e10-1594-2743-50ff-a5b52e167aa5
 resourcetype: Document
 title: MIT22_081JF10_lec13b.pdf
 uid: 54960cad-c1f4-6e89-0401-b1f28b524e41
