--- a/content/resources/mit22_081jf10_lec01a_1.md
+++ b/content/resources/mit22_081jf10_lec01a_1.md
@@ -7,6 +7,7 @@ learning_resource_types: []
 ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
+parent_uid: e7a00e10-1594-2743-50ff-a5b52e167aa5
 resourcetype: Document
 title: MIT22_081JF10_lec01a_1.pdf
 uid: 414f6cb7-ead7-ac29-798f-477f1b065859
