--- a/content/resources/mit22_081jf10_lec01b.md
+++ b/content/resources/mit22_081jf10_lec01b.md
@@ -8,6 +8,7 @@ learning_resource_types: []
 ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
+parent_uid: e7a00e10-1594-2743-50ff-a5b52e167aa5
 resourcetype: Document
 title: MIT22_081JF10_lec01b.pdf
 uid: a0eac4cd-3f65-5795-dad6-2021b1a4c769
