--- a/content/resources/mit22_081jf10_lec05a.md
+++ b/content/resources/mit22_081jf10_lec05a.md
@@ -8,6 +8,7 @@ learning_resource_types: []
 ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
+parent_uid: e7a00e10-1594-2743-50ff-a5b52e167aa5
 resourcetype: Document
 title: MIT22_081JF10_lec05a.pdf
 uid: 1e9d581b-869d-b30a-c41c-b7818d3cae2c
