--- a/content/resources/mit22_081jf10_lec06a.md
+++ b/content/resources/mit22_081jf10_lec06a.md
@@ -7,6 +7,7 @@ learning_resource_types: []
 ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
+parent_uid: e7a00e10-1594-2743-50ff-a5b52e167aa5
 resourcetype: Document
 title: MIT22_081JF10_lec06a.pdf
 uid: c5543aa3-b20b-f25c-f710-7886c8ecc7c5
