--- a/content/resources/mit22_081jf10_lec08a.md
+++ b/content/resources/mit22_081jf10_lec08a.md
@@ -7,6 +7,7 @@ learning_resource_types: []
 ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
+parent_uid: e7a00e10-1594-2743-50ff-a5b52e167aa5
 resourcetype: Document
 title: MIT22_081JF10_lec08a.pdf
 uid: 327ed2c5-275c-48dc-2fca-48a4017c757a
