--- a/content/resources/mit22_081jf10_lec20a.md
+++ b/content/resources/mit22_081jf10_lec20a.md
@@ -7,6 +7,7 @@ learning_resource_types: []
 ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
+parent_uid: e7a00e10-1594-2743-50ff-a5b52e167aa5
 resourcetype: Document
 title: MIT22_081JF10_lec20a.pdf
 uid: ea29b116-4df9-c1ea-1639-8e244194d2ec
