--- a/content/resources/mit22_081jf10_lec25a.md
+++ b/content/resources/mit22_081jf10_lec25a.md
@@ -8,6 +8,7 @@ learning_resource_types: []
 ocw_type: OCWFile
 parent_title: Lectures and Readings
 parent_type: CourseSection
+parent_uid: e7a00e10-1594-2743-50ff-a5b52e167aa5
 resourcetype: Document
 title: MIT22_081JF10_lec25a.pdf
 uid: 01a1ce25-6e33-da25-25f3-29e957d16851
